css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Ubuntu&display=swap");

:root {
  --max-width: 75rem;
  --font-stack: "Montserrat", sans-serif;
  --logo-font: "Ubuntu", sans-serif;
  --main-color: #ff4c68;
  --secondary-color: #ee913a;
  --white-color: #fff;
  --gray-color: #8f8f8f;
  --dark-orange-color: #ee6439;
}

body {
  font-family: var(--font-stack);
  text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 900;
}

.big-heading {
  font-weight: 900;
  font-size: 2.5rem;
  line-height: 1.5;
}

.section-heading {
  font-size: 3rem;
  line-height: 1.5;
}

/* Containers */

.container-fluid {
  padding: 1.5rem;
  max-width: var(--max-width);
}

.mw-1200 {
  max-width: var(--max-width);
}

/* Sections */

.colored-section {
  background-color: var(--main-color);
  color: var(--white-color);
}

.gradient-background {
  background-image: linear-gradient(
    135deg,
    var(--main-color),
    var(--secondary-color)
  );
}

.white-section {
  background-color: var(--white-color);
}

/* Navigation Bar */

.navbar {
  padding: 0 0 2.5rem;
}

.navbar-brand {
  font-family: var(--logo-font);
  font-size: 2.5rem;
  font-weight: bold;
}

.nav-item {
  padding: 0 1.125rem;
}

.nav-link {
  font-size: 1.5rem;
  font-weight: 400;
}

/* Download Buttons */

.download {
  margin: 0.5rem 0.75rem;
}

button > i {
  width: 1.25rem;
}

/* Title Section */

.title-image {
  margin-top: 1.5rem;
  height: 31.25rem;
}

#title {
  text-align: center;
}

.feature {
  padding: 5%;
}

.feature-icon {
  color: var(--secondary-color);
  padding-bottom: 1rem;
}

.feature-icon:hover {
  color: var(--main-color);
}

.feature-header {
  font-weight: 700;
  font-size: 1.5rem;
}

.feature-text {
  color: var(--gray-color);
}

/* Feature Section */

#features {
  padding: 3rem 0;
  background-color: var(--white-color);
  position: relative;
}

/* Testimonial Section */

#testimonials {
  background: var(--dark-orange-color);
}

.testimonial-text {
  font-size: 2rem;
  line-height: 1.5;
}

.testimonial-image {
  width: 10%;
  min-width: 4.6875rem;
  border-radius: 100%;
  margin: 1.25rem;
}

/* Press Section */

#press {
  background-color: var(--dark-orange-color);
}

.press-logo {
  height: 2.1875rem;
  margin: 1.25rem 1.25rem 0.9375rem;
}

/* Pricing Section */

.price-slogan {
  font-size: 1.2rem;
}

.pricing-column {
  padding: 3% 2%;
}

.price-text {
  font-size: 3rem;
  line-height: 1.5;
}

/* Call to Action */

#cta h3 {
  margin-bottom: 2rem;
}

.cta-btn-download {
  margin: 0.5rem 0.75rem;
}

/* Footer */

#footer {
  background-color: white;
}

.social-icon {
  margin: 1.25rem 0.625rem 0.625rem 0.625rem;
  border: solid 0.125rem;
  border-radius: 50%;
  padding: 0.375rem;
  width: 1rem;
  height: 1rem;
  box-sizing: content-box;
}

.social-icon:hover {
  background-color: var(--main-color);
  border-color: var(--main-color);
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

@media (min-width: 768px) and (max-width: 991.8px) {
  .last-price {
    max-width: 50%;
    margin: auto;
  }
}

@media (min-width: 768px) {
  .testimonial-text {
    font-size: 3rem;
  }
}

@media (min-width: 992px) {
  #title {
    text-align: left;
    min-height: 34.375rem;
  }

  .big-heading {
    font-size: 3.5rem;
  }

  .title-image {
    position: absolute;
    left: 50%;
    top: -3.125rem;
    z-index: 10;
    transform: translateX(-50%) rotate(25deg);
  }

  .price-slogan {
    font-size: 1.5rem;
  }
}

